@@ -4,6 +4,8 @@
 	  substitution exceptions (Bug #409739)
 	* src/lib/game_selector.py Handle corrupted high score entries (Bug #413848)
 	* Removed dialog separators to be HIG compliant
+	* src/lib/gsudoku.py Stop number pop-up from visibly moving when created
+	* src/lib/gsudoku.py Stop number pop-up from being in taskbar list
 
 2007-03-24  Robert Ancell <robert.ancell@gmail.com>
 
